<resources>
    <string name="app_name">idBuyThat</string>
    <string name="functionText">Function:</string>
    <string name="first_form">1st form</string>
    <string name="second_form">2nd form</string>
    <string name="generate_button">Generate</string>
    <string name="start_timer_button">Start Timer</string>
    <string name="stop_timer_button">Stop Timer</string>
    <string name="player1_score">Player 1 score:</string>
    <string name="Player2_Score">Player 2 score:</string>
    <string name="rules_button">Rules</string>
    <string name="settings">Settings</string>
</resources>
